// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Renders correctly 1`] = `
<div
  className="sc-bwzfXH eWjfnz"
>
  <label
    className="hl-checkbox hl-checkbox--unchecked"
  >
    <input
      defaultChecked={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="hl-checkbox__mark"
    />
    <span
      className="sc-bdVaJa hOTKmH"
    >
      Checkbox
    </span>
  </label>
</div>
`;

exports[`Checkbox checked Renders correctly 1`] = `
<div
  className="sc-bwzfXH eWjfnz"
>
  <label
    className="hl-checkbox hl-checkbox--checked"
  >
    <input
      defaultChecked={true}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="hl-checkbox__mark"
    />
    <span
      className="sc-bdVaJa hOTKmH"
    >
      Checked checkbox
    </span>
  </label>
</div>
`;

exports[`Checkbox disabled Renders correctly 1`] = `
<div
  className="sc-bwzfXH eWjfnz"
>
  <label
    className="hl-checkbox hl-checkbox--unchecked hl-checkbox--disabled"
  >
    <input
      defaultChecked={false}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="hl-checkbox__mark"
    />
    <span
      className="sc-bdVaJa hOTKmH"
    >
      Disabled checkbox
    </span>
  </label>
</div>
`;
